<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.shard.generalswap</groupId>
  <artifactId>generalswap</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>GeneralisedSwap</name>

  <properties>
    <java.version>25</java.version>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>papermc-repo</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>

    <repository>
      <id>maxhenkel-repo</id>
      <url>https://maxhenkel.de/repository/public</url>
    </repository>

  </repositories>


  <dependencies>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>26.1.2.build.69-stable</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>me.phoenix</groupId>
      <artifactId>manhuntplus</artifactId>
      <version>1.4.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>de.maxhenkel</groupId>
      <artifactId>voicechat</artifactId>
      <version>2.6.14</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>25</source>
          <target>25</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
